tests/error/conflict_super.gw
#! [contains] function name 'test' conflicts with previously defined value
class C {
  var int test;
}

class D extends C {
  fun void test(){}
}
